fix: codeFeature pixel bg overflow, headerObserver simplification

--- a/components/Header/DesktopNav/index.module.scss
+++ b/components/Header/DesktopNav/index.module.scss
@@ -51,6 +51,7 @@
 .content {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   position: relative;
   width: 100%;
 
